--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,14 @@ spring:
         properties:
             hibernate:
               format_sql: true
+    mail:
+        host: smtp.gmail.com
+        port: 587
+        username: olviehubert@gmail.com
+        password: eqirdytzzinfthdp
+        properties:
+            mail:
+                smtp:
+                    auth: true
+                    starttls:
+                        enable: true
